@@ -18,6 +18,9 @@ def safe_decode_header(value):
     if value is None:
         return None
 
+    if isinstance(value, unicode):
+        value = value.encode('utf-8')
+
     new_value = []
 
     for data, charset in decode_header(value):
@@ -196,18 +199,20 @@ def get_filename(msg):
     """Get the filename of a message (part)
     """
     filename = msg.get_filename(None)
-    if filename is not None:
+
+    if filename is None:
         filename = msg.get_param('Name', None)
 
-        # if the value is already decoded or a other tuple
-        # we just take the value and use the decode_header function
-        if isinstance(filename, tuple):
-            if filename[0] is not None and filename[0] not in ('utf-8', 'utf8'):
-                filename = filename[2].decode(filename[0]).encode('utf-8')
-            else:
-                filename = safe_utf8(filename[2])
+    # if the value is already decoded or another tuple
+    # we just take the value and use the decode_header function
+    if isinstance(filename, tuple):
+        if filename[0] is not None and filename[0] not in ('utf-8', 'utf8'):
+            filename = filename[2].decode(filename[0]).encode('utf-8')
         else:
-            filename = safe_decode_header(filename)
+            filename = safe_utf8(filename[2])
+
+    else:
+        filename = safe_decode_header(filename)
 
     return filename
 
