@@ -5,7 +5,8 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix filename encoding handling.
+  [jone]
 
 
 1.0.2 (2012-03-28)
